--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 h1 {
   color: #EDEFDF;
+  margin-bottom:1.4rem;
   font-size: 6rem;
   font-family: "Yeseva One", serif;
   font-weight: 400;
@@ -885,23 +886,22 @@ button {
   position: relative;
   z-index: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
-.wrap p {
-  max-width: 40%;
+.wrap div {
+  flex:1;
 }
 
 .wrap-text {
 position: fixed;
 padding: 6rem 2rem;
-max-width: 40%;
 }
 
 .ten {
   width: 100%;
   height: 200vh;
-  background: linear-gradient(90deg, rgba(171, 78, 104) 0%, rgba(55, 61, 31) 100%);
+  /* background: linear-gradient(90deg, rgba(171, 78, 104) 0%, rgba(55, 61, 31) 100%); */
 }
 
 .container {
